--- a/PiadaPronta_v01.ipynb
+++ b/PiadaPronta_v01.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/michel-m3tz/imersao-ia/blob/main/PiadaPronta_v01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -286,72 +297,10 @@
         "    print(\"\\nNão é possível executar a orquestração: Modelo Gemini não configurado (verifique a Célula 3 e a Célula 2 para a API Key).\")"
       ],
       "metadata": {
-        "id": "xHSNlTd84heJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 905
-        },
-        "outputId": "c9b7d8b3-480f-4a1c-e750-ebcffa5e52bc"
+        "id": "xHSNlTd84heJ"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Buscando notícias do feed RSS: https://agenciabrasil.ebc.com.br/rss/economia/feed.xml\n",
-            "Encontradas 10 entradas no feed. Processando as primeiras 3...\n",
-            " - Notícia 1: 'Redução no preço do diesel da Petrobras não chega ...' processada.\n",
-            " - Notícia 2: 'Especialistas defendem diversificação nas parceria...' processada.\n",
-            " - Notícia 3: 'Itaipu completa 51 anos com foco em inovação energ...' processada.\n",
-            "Processamento do feed RSS concluído. 3 notícias prontas para gerar humor.\n",
-            "\n",
-            "--- Piadas Geradas ---\n",
-            "\n",
-            "Processando Notícia 1/3:\n",
-            "\n",
-            "Processando notícia para gerar piada bisociativa...\n",
-            "Notícia: 'Título: Redução no preço do diesel da Petrobras não chega ao IPCA\n",
-            "Resumo: <p><p style=\"text-align: c...'\n",
-            "Piada: A Petrobras reduz o diesel, mas o IPCA mal sente. É como se a gente estivesse numa dieta de sorvete: a sorveteria baixa o preço, mas a balança insiste em dizer que nada mudou.\n",
-            "\n",
-            "Análise Bisociativa: A Matriz A é a situação econômica da redução do diesel não se refletindo no IPCA, um problema real e frustrante. A Matriz B é a situação cotidiana de uma dieta, onde a expectativa é de perda de peso, mas, mesmo com esforços, o resultado demora a aparecer. A colisão ocorre ao comparar a economia com a dieta, criando humor ao satirizar a ineficiência da medida econômica, como se a economia estivesse teimosamente \"engordando\" apesar dos esforços. A faísca bisociativa está na quebra da expectativa de que uma ação (redução do diesel/dieta) leve a um resultado imediato e visível (IPCA menor/perda de peso).\n",
-            "\n",
-            "--------------------\n",
-            "\n",
-            "Processando Notícia 2/3:\n",
-            "\n",
-            "Processando notícia para gerar piada bisociativa...\n",
-            "Notícia: 'Título: Especialistas defendem diversificação nas parcerias comerciais\n",
-            "Resumo: <p><p style=\"text-ali...'\n",
-            "Piada: Especialistas defendem diversificação nas parcerias comerciais do Brasil, porque apostar todas as fichas na China é como ir a um rodízio só comendo rolinho primavera: uma hora você vai sentir falta de uma picanha e um pastel de Belém.\n",
-            "\n",
-            "Análise Bisociativa:\n",
-            "Matriz A: A necessidade de diversificação nas parcerias comerciais do Brasil para não depender excessivamente da China.\n",
-            "Matriz B: A experiência de ir a um rodízio, que oferece uma variedade de opções culinárias, e restringir-se a apenas um tipo de comida.\n",
-            "\n",
-            "A colisão humorística ocorre porque a situação econômica complexa (Matriz A) é comparada a uma situação cotidiana e banal (Matriz B). A graça está na inesperada analogia entre a estratégia comercial de um país e a escolha de comida em um restaurante. A \"faísca bisociativa\" acontece quando percebemos que, assim como limitar as opções em um rodízio é insatisfatório, depender exclusivamente de um parceiro comercial pode ser arriscado e limitar o potencial de crescimento e resiliência econômica.\n",
-            "\n",
-            "--------------------\n",
-            "\n",
-            "Processando Notícia 3/3:\n",
-            "\n",
-            "Processando notícia para gerar piada bisociativa...\n",
-            "Notícia: 'Título: Itaipu completa 51 anos com foco em inovação energética\n",
-            "Resumo: <p><p style=\"text-align: cen...'\n",
-            "Piada: Itaipu faz 51 anos e está investindo pesado em inovação energética, tipo um botox para usina hidrelétrica. Quer continuar jovial, produzindo energia limpa, mas no fundo a gente sabe que no próximo vertedouro vai vazar um pouquinho.\n",
-            "\n",
-            "Análise Bisociativa:\n",
-            "*   **Matriz A:** Itaipu, uma usina hidrelétrica \"idosa\" (51 anos) que investe em modernização e se preocupa com a imagem de sustentabilidade e inovação.\n",
-            "*   **Matriz B:** A busca pela juventude e a negação do envelhecimento através de procedimentos estéticos, como o botox, que visam esconder os sinais da idade.\n",
-            "\n",
-            "A colisão acontece porque ambas as matrizes envolvem a tentativa de manter uma imagem ou funcionalidade idealizada, mesmo quando a realidade (envelhecimento da usina, vazamentos inevitáveis) sugere o contrário. O humor surge da comparação inusitada entre uma usina hidrelétrica e uma pessoa que busca rejuvenescer, explorando a futilidade de tentar esconder o inevitável. O \"vazamento\" é uma metáfora para os problemas que\n",
-            "--------------------\n",
-            "\n",
-            "--- Fim da Geração ---\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
